# Jetson-PI-Edge

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  PI_MIGRATION_STATUS.md  README.md  convert_hf_to_gguf.py  vit_config.json  vit_config_pi05.json
cmake/: pi0_profile_options.cmake
common/: common.h
docs/: foreground_server_usage.md  model_conversion.md  python_api.md
examples/: convert_legacy_llama.py
examples/parallel/: parallel.cpp
ggml/src/: CMakeLists.txt  ggml-backend.cpp
ggml/src/ggml-cuda/: ggml-cuda.cu
ggml/src/ggml-sycl/: CMakeLists.txt
gguf-py/gguf/: constants.py  gguf_writer.py  tensor_mapping.py
gguf-py/gguf/scripts/: gguf_dump.py
include/: jetson_pi_llm.h  jetson_pi_mllm.h  jetson_pi_pi0.h  llama.h  pi-model-detect.h  pi-model.h  pi05-debug-dump.h
latency_optimize_docs/: pi0_decode_graph_reuse.md  pi0_decode_kv_gpu.md  pi0_decode_mask_reuse.md  pi0_decode_memory_init.md  pi0_vit_optimization.md
python/: CMakeLists.txt  jetson-pi.cpp  jetson_pi_foreground.py
python/tests/: test_api.py
scripts/: run_pi0.sh  run_pi0_4090.sh
src/: CMakeLists.txt  jetson_pi_llm.cpp  jetson_pi_mllm.cpp  jetson_pi_pi0.cpp  jetson_pi_pi0_prompt.h  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-chat.cpp  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-model-loader.cpp  llama-model.cpp  llama-model.h  llama-nvtx.h  llama-quant.cpp  pi0-build-config.h.in  pi0-perf.h  pi0-prof.h
src/models/: llama.cpp  models.h  pi0.cpp  pi0_ae.cpp
tests/: test_jetson_pi_pi0_state_split.cpp
tools/: pi_model_detect.py
tools/batched-bench/: batched-bench.cpp
tools/main/: main.cpp
tools/mtmd/: CMakeLists.txt  clip-impl.h  clip.cpp  clip.h  clip_vit_debug_print.h  create_image.py  mtmd-cli.cpp  mtmd-helper-pi0-legacy.cpp  mtmd-helper-pi05.cpp  mtmd-helper.cpp  mtmd-helper.h  mtmd-image.cpp  mtmd-image.h  mtmd.cpp  mtmd.h  vision_checkpoint.txt
tools/mtmd/legacy-models/: convert_image_encoder_to_gguf.py  pi0_surgery.py
tools/mtmd/models/: models.h  siglip.cpp
tools/perplexity/: perplexity.cpp
tools/server/: server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-http.cpp  server-http.h  server-task.cpp  server-task.h  server.cpp
